--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,8 +5,8 @@ pinkred       #ef476f
 sun           #ffc43d */
 
 body {
-  background-color: #f8ffe5;
-  color: #1b9aaa;
+  background-color: #f1f1f1;
+  color: #333333;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-sizing: border-box;
 }
@@ -14,36 +14,12 @@ body {
 .App {
   max-width: 460px;
   margin: 0 auto;
-  border: 10px dashed #ef476f;
-  border-radius: 5px;
+  border: 1px solid #e52d27;
+  border-bottom: transparent;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   margin-top: 1em;
   padding: 1em;
-}
-
-/* SEARCH */
-
-.SearchBar {
-  box-sizing: border-box;
-  width: 100%;
-  height: 25px;
-  border-radius: 5px;
-  margin: 0 0;
-  padding: 0 0;
-  font-weight: 600;
-  letter-spacing: .2em;
-  color: #ef476f;
-  background-color: #00ea79;
-}
-
-button {
-  display: block;
-  margin: 0 0 10px 0;
-  width: 100%;
-  height: 25px;
-  background-color: #ffc43d;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 /* TIMER */
@@ -53,7 +29,7 @@ button {
   font-size: 30px;
   padding: 5px;
   text-align: center;
-  color: #00ea79;
+  color: #559900;
 }
 
 .TimerControl {
@@ -61,19 +37,41 @@ button {
 }
 
 .TimerControl div {
-  background-color: #ffc43d;
   height: 25px;
   cursor: pointer;
-  width: 100%;
-  
+  width: 100%;  
 }
 
 .TimerControl div select {
-  background: transparent;
   border: none;
   width: 100%;
   height: 25px;
   padding: 5px;
+}
+
+/* SEARCH */
+
+.SearchBar {
+  box-sizing: border-box;
+  width: 100%;
+  height: 25px;
+  border-radius: 5px;
+  margin: 5px 0;
+  padding: 0 0;
+  font-weight: 600;
+  letter-spacing: .2em;
+}
+
+button {
+  display: block;
+  margin: 0 0 10px 0;
+  width: 100%;
+  height: 25px;
+  background-color: #e52d27;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* VIDEOS */
@@ -83,13 +81,13 @@ button {
   min-height: 220px;
   padding: 15px;
   margin-bottom: 15px;
-  border-bottom: 10px dashed #ef476f;
+  border-bottom: 10px dashed #e52d27;
 }
 
 .Player {
   max-width: 320px;
   max-height: 195px;
-  border: 5px solid #00ea79;
+  border: 5px solid #559900;
   border-radius: 5px;
 }
 
@@ -102,7 +100,6 @@ button {
   justify-content: space-between;
   margin-bottom: 10px;
   opacity: .7;
-
 }
 
 .VideoItem:hover {
